; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_FileDeleteInnerW.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_FileDeleteInnerW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FileDeleteInnerW(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %7 = load i32, i32* @MAX_SIZE, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %4, align 8
  %10 = alloca i32, i64 %8, align 16
  store i64 %8, i64* %5, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  store i32 1, i32* %6, align 4
  br label %21

14:                                               ; preds = %1
  %15 = mul nuw i64 4, %8
  %16 = trunc i64 %15 to i32
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @UniStrCpy(i32* %10, i32 %16, i32* %17)
  %19 = call i32 @ConvertPathW(i32* %10)
  %20 = call i32 @OSFileDeleteW(i32* %10)
  store i32 %20, i32* %2, align 4
  store i32 1, i32* %6, align 4
  br label %21

21:                                               ; preds = %14, %13
  %22 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %22)
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @UniStrCpy(i32*, i32, i32*) #2

declare dso_local i32 @ConvertPathW(i32*) #2

declare dso_local i32 @OSFileDeleteW(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
